--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_ENV="DEV"
-NEXT_PUBLIC_API_PROD=""
-NEXT_PUBLIC_API_DEV="http://localhost:3001/api/"
+NEXT_PUBLIC_ENV="PROD"
+NEXT_PUBLIC_API_PROD="https://isleverse-be.onrender.com/"
+NEXT_PUBLIC_API_DEV="http://localhost:3001"
